# ReSide

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSES.md  Product-Brief.md  README.md  plan.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 0001_init.sql
crates/core/src/: db.rs  error.rs  installer.rs  installs.rs  ipa_meta.rs  ipa_store.rs  lib.rs  locate.rs  operation.rs  paths.rs  proc_lock.rs  secure_storage.rs  signer.rs
crates/core/src/device/: mod.rs  pair_record.rs
crates/core/src/refresh/: agent.rs  mod.rs  scheduler.rs
crates/core/src/setup/: adi_provision.rs  mod.rs  permissions.rs
crates/core/src/signing/: adi.rs  bundle_id.rs  entitlements.rs  free_apple_id.rs  ipa_pipeline.rs  mod.rs  paid_cert.rs  quota.rs
crates/core/src/transport/: mdns_discovery.rs  mod.rs  muxer.rs  remote_xpc.rs  tunneld.rs  wifi_cache.rs
crates/tauri-app/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
crates/tauri-app/src/: App.tsx  Gallery.tsx  ReSideApp.tsx  index.css  main.tsx
crates/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-app/src-tauri/capabilities/: default.json
crates/tauri-app/src-tauri/src/: lib.rs  main.rs  redaction.rs
crates/tauri-app/src/components/: chrome.tsx  credentials.tsx  icon.tsx  logo.tsx  ui.tsx
crates/tauri-app/src/lib/: cn.ts  ipc.ts  operations.ts
crates/tauri-app/src/screens/: Activity.tsx  Dashboard.tsx  Devices.tsx  Import.tsx  ImportModal.tsx  Install.tsx  PairModal.tsx  Pairing.tsx  RefreshModal.tsx  Settings.tsx  Setup.tsx  System.tsx  Tray.tsx
crates/tauri-app/src/themes/: catppuccin-latte.css  dracula.css
docs/: AGENT-HANDOFF.md  ARCHITECTURE.md  ROADMAP.md
docs/artboards/: devices-pane-v2.html  devices-pane.html
packaging/: RELEASING.md  build-tarball.sh  install.sh  release-notes-v0.4.0.md  release-notes-v0.4.1.md  release-notes-v0.5.0.md  reside.desktop
scripts/: reside-reset-newuser.sh
