[package]
name = "reside-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ReSide headless background app-refresh agent (task 11c slice 2)."

[[bin]]
name = "reside-agent"
path = "src/main.rs"

[dependencies]
# The agent is deliberately thin: it shares the engine + context-building with
# the UI via reside-core and links *none* of the Tauri/GUI stack.
reside-core = { path = "../core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Only for the SqlitePool type held in the agent's context; the pool itself is
# created and migrated by reside-core::db::open.
sqlx.workspace = true
